--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -37,21 +37,46 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_name"
+                android:text="@string/sign_up"
                 android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:textColor="@android:color/black"
+                android:textSize="30sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/first_name"
                 android:layout_marginTop="50dp"
                 android:textColor="@android:color/black"
-                android:textSize="30dp"/>
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/firstnameText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/last_name"
+                android:layout_marginTop="10dp"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/lastnameText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Email"
-                android:layout_gravity="left"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="10dp"
                 android:textColor="@android:color/black"
-                android:textSize="12dp"/>
-            
+                android:textSize="12sp" />
+
             <EditText
                 android:id="@+id/emailText"
                 android:layout_width="match_parent"
@@ -61,13 +86,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Password"
-                android:layout_gravity="left"
                 android:layout_marginTop="10dp"
                 android:textColor="@android:color/black"
-                android:textSize="12dp"/>
+                android:textSize="12sp" />
 
             <EditText
                 android:id="@+id/passwordText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/confirm_password"
+                android:layout_marginTop="10dp"
+                android:textColor="@android:color/black"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/confirmpasswordText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -76,10 +113,10 @@
                 android:layout_width="250dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/sign_up_button"
                 android:scaleX=".9"
-                android:scaleY=".9"
-                android:background="@drawable/sign_in_button"/>
+                android:scaleY=".9" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -91,22 +128,18 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/don_t_have_an_account"
-                    android:layout_gravity="left"
-                    android:layout_marginTop="10dp"
+                    android:text="@string/already_have_an_account"
                     android:textColor="@android:color/black"
-                    android:textSize="12dp"/>
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/sign_up"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="5dp"
                     android:text="@string/sign_up"
+                    android:layout_marginLeft="5dp"
                     android:textColor="#329BFF"
-                    android:textSize="12dp" />
+                    android:textSize="12sp" />
 
             </LinearLayout>
 
