--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -53,7 +53,7 @@
                 android:textSize="12dp"/>
             
             <EditText
-                android:id="@+id/emailText"
+                android:id="@+id/emailSignupText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -67,12 +67,12 @@
                 android:textSize="12dp"/>
 
             <EditText
-                android:id="@+id/passwordText"
+                android:id="@+id/passwordSignupText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <Button
-                android:id="@+id/signInButton"
+                android:id="@+id/signupButton"
                 android:layout_width="250dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
