--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -109,7 +109,7 @@
                 android:layout_height="wrap_content" />
 
             <Button
-                android:id="@+id/signupButton"
+                android:id="@+id/signUpButton"
                 android:layout_width="250dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
